--- a/cart/locale/ru/LC_MESSAGES/django.po
+++ b/cart/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-01 15:21+0000\n"
+"POT-Creation-Date: 2025-11-06 08:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -52,14 +52,34 @@ msgstr "Цена"
 msgid "Update"
 msgstr "Обновить"
 
-#: cart/templates/cart/detail.html:70
+#: cart/templates/cart/detail.html:71
+msgid "Subtotal"
+msgstr "Подытог"
+
+#: cart/templates/cart/detail.html:78
+msgid "coupon"
+msgstr "купон"
+
+#: cart/templates/cart/detail.html:78
+msgid "off"
+msgstr "скидка"
+
+#: cart/templates/cart/detail.html:86
 msgid "Total"
 msgstr "Общая сумма"
 
-#: cart/templates/cart/detail.html:78
+#: cart/templates/cart/detail.html:94
+msgid "Apply a coupon"
+msgstr "Применить купон"
+
+#: cart/templates/cart/detail.html:98
+msgid "Apply"
+msgstr "Применить"
+
+#: cart/templates/cart/detail.html:102
 msgid "Continue shopping"
 msgstr "Продолжить покупку"
 
-#: cart/templates/cart/detail.html:79
+#: cart/templates/cart/detail.html:103
 msgid "Checkout"
 msgstr "Оформить заказ"
