--- a/orders/locale/ru/LC_MESSAGES/django.po
+++ b/orders/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-06 09:00+0000\n"
+"POT-Creation-Date: 2025-11-06 13:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -163,11 +163,24 @@ msgid "Items bought"
 msgstr "Купленные элементы"
 
 #: orders/templates/admin/orders/order/detail.html:96
-#: orders/templates/admin/orders/order/detail.html:111
+#: orders/templates/admin/orders/order/detail.html:127
 #: orders/templates/orders/order/create.html:25
 #: orders/templates/orders/order/pdf.html:45
 msgid "Total"
 msgstr "Общая сумма"
+
+#: orders/templates/admin/orders/order/detail.html:113
+msgid "Subtotal"
+msgstr "подытог"
+
+#: orders/templates/admin/orders/order/detail.html:119
+msgid "coupon"
+msgstr "купон"
+
+#: orders/templates/admin/orders/order/detail.html:119
+#: orders/templates/orders/order/create.html:19
+msgid "off"
+msgstr "скидка"
 
 #: orders/templates/orders/order/create.html:4
 #: orders/templates/orders/order/create.html:7
@@ -177,10 +190,6 @@ msgstr "Оформить"
 #: orders/templates/orders/order/create.html:9
 msgid "Your order"
 msgstr "Ваш заказ"
-
-#: orders/templates/orders/order/create.html:19
-msgid "off"
-msgstr ""
 
 #: orders/templates/orders/order/create.html:31
 msgid "Place order"
